--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="site-heading">
                     <h1>Miguel Viera</h1>
                     <hr class="small">
-                    <span class="subheading">A Software Craftsmanship Apprentice trying to make it's own path. Journeyman on Codesai</span>
+                    <span class="subheading">A Software Craftsmanship Apprentice trying to make his own path. Journeyman at Codesai</span>
                 </div>
             </div>
         </div>
@@ -316,7 +316,7 @@
                 <ul class="list-inline text-center">
                     
                         <li>
-                            <a href="https://twitter.com/Groxalf_Esp" target="_blank">
+                            <a href="https://twitter.com/mangelviera" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
